--- a/src/main/webapp/assets/css/header.css
+++ b/src/main/webapp/assets/css/header.css
@@ -5,7 +5,6 @@ body {
     --tw-bg-opacity: 1;
     background-color: rgb(249 250 251/var(--tw-bg-opacity));
     position: relative;
-    height: 100%;
 }
 
 .header_section {
@@ -138,4 +137,58 @@ input:focus-within {
 
 input[type="checkbox"] {
 	height: auto;
+}
+
+.fa-caret-up {
+	display: none;
+}
+
+/** Error Message **/
+
+.pop_up_container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #e8e9eca6;
+    z-index: 1;
+    top: 0;
+    left: 0;
+}
+
+.error_message_container {
+    display: flex;
+    width: 20%;
+    position: relative;
+    left: 43%;
+    top: 5%;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.error_message {
+    font-size: 20px;
+}
+
+.error_btn_container {
+    margin-top: 20px;
+    width: 30%;
+}
+
+.okay_btn {
+    color: white;
+    border: none;
+    background: darkslategray;
+    padding: 10px 15px;
+    border-radius: 5px;
+    width: -webkit-fill-available;
+}
+
+.okay_btn:hover {
+	cursor:pointer;
+	background: #2d7474;
 }
