--- a/src/main/webapp/assets/css/profile.css
+++ b/src/main/webapp/assets/css/profile.css
@@ -53,9 +53,7 @@
 
 .edit_btn_container {
     margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    padding-right: 40px;
+    width: 330px;
 }
 
 .edit_btn ,.save_btn{
@@ -64,6 +62,7 @@
     background: darkslategray;
     padding: 10px 45px;
     border-radius: 5px;
+    width: -webkit-fill-available;
 }
 
 .edit_btn:hover ,.save_btn:hover {
